# wn-llamaindex-agents-course

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
notebooks/: chapter1_how_to_talk_with_ai.ipynb  chapter2_what_is_an_agent.ipynb  chapter3_how_to_build_with_frameworks__llamaindex_basics.ipynb
scripts/: connectivity_check.py
